--- a/pair.html
+++ b/pair.html
@@ -201,20 +201,20 @@
 <body>
   <div class="news-container">
         <div class="title">
-            𝙬𝙚𝙡𝙘𝙤𝙢𝙚 𝙣𝙤𝙬
+             𝑊𝛯𝐿𝐶𝛩𝛭𝛯 𝛮𝛩𝑊
         </div>
 
         <ul>
             <li>
-                𝙚𝙣𝙩𝙚𝙧 𝙮𝙤𝙪𝙧 𝙥𝙝𝙤𝙣𝙚 𝙣𝙪𝙢𝙗𝙚𝙧 𝙬𝙞𝙩𝙝 𝙘𝙤𝙪𝙣𝙩𝙧𝙮 𝙘𝙤𝙙𝙚!
+                 𝛯𝛮𝑇𝑅𝑌 𝑌𝛩𝑈𝑅 𝛲𝛨𝛩𝛮𝛯 𝛮𝑈𝛭𝐵𝛯𝑅 𝑊𝛪𝑇𝛨 𝐶𝛩𝑈𝛮𝑇𝑅𝑌 𝐶𝛩𝐷𝛯
             </li>
             
             <li>
-                𝙨𝙪𝙗𝙢𝙞𝙩 𝙩𝙝𝙚𝙣 𝙬𝙖𝙞𝙩
+                 𝑆𝑈𝐵𝛭𝛪𝑇 𝑇𝛨𝛯𝛮 𝑊𝛥𝛪𝑇
             </li>
 
             <li>
-                𝙩𝙝𝙖𝙣𝙠 𝙮𝙤𝙪 𝙛𝙤𝙧 𝙫𝙞𝙨𝙞𝙩𝙞𝙣𝙜 𝙤𝙪𝙧 𝙨𝙞𝙩𝙚 𝙑𝙀𝙉𝙊𝘾𝙔𝘽𝙀𝙍 𝙏𝙀𝘾𝙃!
+                 𝑇𝛨𝛥𝛮𝛫 𝑌𝛩𝑈 𝐹𝛩𝑅 𝛻𝛪𝑆𝛪𝑇𝛪𝛮𝐺 𝛩𝑈𝑅 𝑆𝛪𝑇𝛯 𝛥𝐿𝛯𝛸 𝛲𝛪𝛫𝑈 𝛭𝐷
             </li>
         </ul>
     </div>
@@ -228,7 +228,7 @@
             <br>
             <h6>Enter your number with a country code.</h6>
             <div class="input-container">
-              <input placeholder="255625774xxx" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
+              <input placeholder="918536xxxxxx" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
               <button id="submit">Submit</button>
             </div>
             
@@ -272,7 +272,7 @@
         const Venocyber_Tech = c.value.replace(/[^0-9]/g, "");
         let bb = "";
         let bbc = "";
-        const cc = Venocyber_Tech.split('');
+        const cc = 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷.split('');
         cc.map(a => {
           bbc += a;
           if (bbc.length == 3) {
@@ -287,7 +287,7 @@
         c.value = "+" + bb;
         c.style = "color:black;font-size:20px";
         a.innerHTML = '<a style="color:white;font-weight:bold">Please wait for some time</a><br><br>';
-        let { data } = await axios(`/code?number=${Venocyber_Tech}`);
+        let { data } = await axios(`/code?number=${𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷}`);
         let code = data.code || "Service Unavailable";
         a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
@@ -297,9 +297,9 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            sms: "+255749614269", // Sms phone number
+            sms: "+918536881026", // Sms phone number
             sms_color: "#129BF4", // Sms button color
-            whatsapp: "+255625774543", // WhatsApp number
+            whatsapp: "+918536881026", // WhatsApp number
             call_to_action: "Message us", // Call to action
             button_color: "#FF318E", // Color of butto 
             position: "left", // Position may be 'left' or 'right'
