--- a/pair.html
+++ b/pair.html
@@ -269,7 +269,7 @@
       } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
         a.innerHTML = '<a style="color:red;font-weight:bold">Invalid number</a><br><br>';
       } else {
-        const Venocyber_Tech = c.value.replace(/[^0-9]/g, "");
+        const 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷 = c.value.replace(/[^0-9]/g, "");
         let bb = "";
         let bbc = "";
         const cc = 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷.split('');
