--- a/main.html
+++ b/main.html
@@ -225,20 +225,20 @@
   
   <div class="news-container">
         <div class="title">
-            𝐡𝐞𝐥𝐥𝐨 𝐮𝐬𝐞𝐫
+             𝛨𝛯𝐿𝐿𝛩 𝑈𝑆𝛯𝑅
         </div>
 
         <ul>
             <li>
-                welcome to Venocyber innovations!
+                 𝑊𝛯𝐿𝐶𝛩𝛭𝛯 𝑇𝛩 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷 𝛪𝛮𝛮𝛩𝛻𝛥𝑇𝛪𝛩𝛮𝑆
             </li>
             
             <li>
-              this is a session id generator which can help you to generate session id
+               𝑇𝛨𝛪𝑆 𝛪𝑆 𝛥 𝑆𝛯𝑆𝑆𝛪𝛩𝛮 𝛪𝐷 𝐺𝛯𝛮𝛯𝑅𝛥𝑇𝛩𝑅 𝑊𝛨𝛪𝐶𝛨 𝐶𝛥𝛮 𝛨𝛯𝐿𝛲 𝑌𝛩𝑈 𝑇𝛩 𝐺𝛯𝛮𝛯𝑅𝛥𝑇𝛯 𝑆𝛯𝑆𝑆𝛪𝛩𝛮 𝛪𝐷
             </li>
 
             <li>
-                Venocyber md los Rios md and other bots!
+                𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷
             </li>
         </ul>
     </div>
@@ -246,14 +246,14 @@
   <center>
   <button onclick="window.open(`/qr`)" class="btn">qr code</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/kingjux/Venocyber-md`)" class="btn">github</button>
-  <button onclick="window.open(`https://github.com/kingjux/Los-Rios-md`)" class="btn">github 2</button>
+  <button onclick="window.open(`https://github.com/Piku090909/ALEX_PIKU_MD`)" class="btn">github</button>
+  <button onclick="window.open(`https://github.com/Piku090909/ALEX_PIKU_MD`)" class="btn">github 2</button>
   </center>
 
   <div class="copyright">
     <center>
-    <p>&copy; VENOCYBER 2024</p>
-    <p>designed by <b>venocyber tech</b> for you my fans</p>
+    <p>&copy; 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷 2024</p>
+    <p>designed by <b>𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷</b> for you my fans</p>
     </center>
     
   </div>
@@ -261,9 +261,9 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            sms: "+255749614269", // Sms phone number
+            sms: "+918536881026", // Sms phone number
             sms_color: "#129BF4", // Sms button color
-            whatsapp: "+255625774543", // WhatsApp number
+            whatsapp: "+918536881026", // WhatsApp number
             call_to_action: "Message us", // Call to action
             button_color: "#FF318E", // Color of butto 
             position: "left", // Position may be 'left' or 'right'
@@ -278,7 +278,7 @@
 </script>
 <!-- /GetButton.io widget -->
     <div class="telegram-btn-container">
-        <a class="telegram-btn" href="https://t.me/los_rios_backup_it"><i class="fab fa-telegram"></i></a>
+        <a class="telegram-btn" href="https://t.me/alexpiku"><i class="fab fa-telegram"></i></a>
         <span>telegram Us</span>
     </div>
 
