--- a/main.html
+++ b/main.html
@@ -252,8 +252,8 @@
 
   <div class="copyright">
     <center>
-    <p>&copy; 𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷 2024</p>
-    <p>designed by <b>𝛥𝐿𝛯𝛸_𝛲𝛪𝛫𝑈_𝛭𝐷</b> for you my fans</p>
+    <p>&copy; ALEX_PIKU_MD 2024</p>
+    <p>designed by <b>ALEX_PIKU_MD</b> for you my fans</p>
     </center>
     
   </div>
